[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"]}
clap = { version = "4", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12"
proto = { path = "../proto"}
console-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"]}

[[bench]]
name = "proxy_throughput"
harness = false
